--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
   font-family: "Open Sans", sans-serif;
 }
 
+body {
+  background-color: #c5a583;
+}
+
 .header-logo {
   width: 60px;
   height: 60px;
@@ -16,6 +20,7 @@
 }
 
 header {
+  background-color: #ffffff;
   width: 100vw;
   display: flex;
   align-items: center;
@@ -44,6 +49,29 @@ a:hover {
   color: #c5a583;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+
+.slider-section {
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+  max-width: 95vw;
+  transition: transform 0.5s ease-in-out;
+  overflow: hidden;
+  transform: translateX(0);
+}
+
+#slider-image {
+  width: 100%;
+  height: 500px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
 .mobile-menu-icon {
   display: none;
 }
@@ -60,7 +88,7 @@ a:hover {
 
   .mobile-menu-icon {
     display: block;
-    width: 30px;
+    width: 60px;
     filter: #c5a583;
   }
 }
