--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@
 
 body {
   background-color: #c5a583;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .header-logo {
@@ -49,31 +55,59 @@ a:hover {
   color: #c5a583;
 }
 
-main {
-  display: flex;
-  justify-content: center;
-  width: 100vw;
-}
-
-.slider-section {
-  display: flex;
-  justify-content: center;
-  margin-top: 5px;
-  max-width: 95vw;
-  transition: transform 0.5s ease-in-out;
-  overflow: hidden;
-  transform: translateX(0);
-}
-
-#slider-image {
-  width: 100%;
-  height: 500px;
-  border-radius: 20px;
-  object-fit: cover;
-}
-
 .mobile-menu-icon {
   display: none;
+}
+
+.slider {
+  width: 99.5vw;
+  height: 515px;
+  margin: 10px auto;
+  overflow: hidden;
+}
+
+.slides {
+  width: 500%;
+  height: 515px;
+  display: flex;
+}
+
+.slides input {
+  display: none;
+}
+
+.slide {
+  border-radius: 20px;
+  width: 25%;
+}
+
+.slide img {
+  width: 100%;
+  border-radius: 20px;
+}
+
+.manual-navigation {
+  position: absolute;
+  width: 1300px;
+  margin-top: -60px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn {
+  border: 2px solid #727272;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 20px;
+}
+
+.manual-btn:hover {
+  background-color: #727272;
 }
 
 @media screen and (max-width: 720px) {
