--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,8 @@
 body {
   background-color: #c5a583;
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .header-logo {
@@ -27,7 +24,7 @@ body {
 
 header {
   background-color: #ffffff;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -51,6 +48,10 @@ a:hover {
   opacity: 0.5;
 }
 
+a {
+  text-decoration: none;
+}
+
 .nav-links {
   color: #c5a583;
 }
@@ -59,60 +60,72 @@ a:hover {
   display: none;
 }
 
-.slider {
-  width: 99.5vw;
-  height: 515px;
-  margin: 10px auto;
-  overflow: hidden;
-}
-
-.slides {
-  width: 500%;
-  height: 515px;
-  display: flex;
-}
-
-.slides input {
-  display: none;
-}
-
-.slide {
-  border-radius: 20px;
-  width: 25%;
-}
-
-.slide img {
-  width: 100%;
-  border-radius: 20px;
-}
-
-.manual-navigation {
-  position: absolute;
-  width: 1300px;
-  margin-top: -60px;
-  display: flex;
-  justify-content: center;
-}
-
-.manual-btn {
-  border: 2px solid #727272;
-  padding: 5px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 1s;
-}
-
-.manual-btn:not(:last-child) {
-  margin-right: 20px;
-}
-
 .manual-btn:hover {
   background-color: #727272;
 }
 
-@media screen and (max-width: 720px) {
+main {
+  min-height: 460px;
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 15px;
+}
+
+.swiper-slide img {
+  width: 100%;
+  max-width: 1060px;
+  height: 440px;
+  object-fit: fill;
+  border-radius: 20px;
+  transition: 0.6s all ease;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.swiper-slide.swiper-slide-active img {
+  opacity: 1;
+  visibility: unset;
+}
+
+.swiper-slide img:hover {
+  cursor: pointer;
+}
+
+.swiper {
+  width: 100%;
+  height: 460px;
+  overflow: hidden;
+}
+
+.swiper-slide {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.swiper-wrapper {
+  height: 100%;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: 15px;
+}
+
+footer {
+  margin-top: 15px;
+  background-color: #ffffff;
+  width: 100%;
+  height: 300px;
+  box-shadow: 0px -2px 11px 0px rgba(0, 0, 0, 0.4);
+}
+
+@media screen and (max-width: 816px) {
   header {
-    width: 100vw;
+    width: 100%;
     padding: 20px;
   }
 
@@ -124,5 +137,29 @@ a:hover {
     display: block;
     width: 60px;
     filter: #c5a583;
+  }
+
+  .swiper-slide {
+    height: 100%;
+  }
+
+  .swiper-slide img {
+    height: 350px;
+    box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.4);
+  }
+
+  .swiper {
+    height: 366px;
+  }
+}
+
+@media screen and (max-width: 670px) {
+  .swiper {
+    height: 206px;
+  }
+
+  .swiper-slide img {
+    box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.4);
+    height: 190px;
   }
 }
