--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
 }
 
 body {
-  background-color: #c5a583;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -30,7 +29,6 @@ header {
   justify-content: space-between;
   padding: 20px 100px;
   border-bottom: 1px solid #c7c7c7;
-  box-shadow: 2px 3px 7px 0px rgba(0, 0, 0, 0.4);
 }
 
 .nav-list {
@@ -65,19 +63,21 @@ a {
 }
 
 main {
+  box-shadow: inset 0px 2px 20px -1px rgba(0, 0, 0, 0.75);
+  background-color: #c5a583;
   min-height: 460px;
   max-width: 100%;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 15px;
 }
 
 .swiper-slide img {
   width: 100%;
-  max-width: 1060px;
+  max-width: 1080px;
   height: 440px;
   object-fit: fill;
   border-radius: 20px;
+  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
   transition: 0.6s all ease;
   visibility: hidden;
   opacity: 0;
@@ -116,11 +116,9 @@ main {
 }
 
 footer {
-  margin-top: 15px;
   background-color: #ffffff;
   width: 100%;
   height: 300px;
-  box-shadow: 0px -2px 11px 0px rgba(0, 0, 0, 0.4);
 }
 
 @media screen and (max-width: 816px) {
