--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,15 @@ body {
 }
 
 header {
+  position: fixed;
+  z-index: 2;
   background-color: #ffffff;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 20px 100px;
-  border-bottom: 1px solid #c7c7c7;
+  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
 }
 
 .nav-list {
@@ -63,12 +65,13 @@ a {
 }
 
 main {
-  box-shadow: inset 0px 2px 20px -1px rgba(0, 0, 0, 0.75);
   background-color: #c5a583;
   min-height: 460px;
   max-width: 100%;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
+  margin-top: 100px;
 }
 
 .swiper-slide img {
@@ -95,6 +98,7 @@ main {
 .swiper {
   width: 100%;
   height: 460px;
+  margin: 20px;
   overflow: hidden;
 }
 
@@ -113,6 +117,35 @@ main {
 .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal {
   bottom: 15px;
+}
+
+.available-properties-wrapper {
+  width: 100%;
+  padding: 20px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: repeat(4, minmax(215px, 215px));
+  gap: 50px 80px;
+  margin-bottom: 30px;
+}
+
+.available-property {
+  height: 250px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+  transition: 0.6s all ease;
+  overflow: hidden;
+}
+
+.available-property img {
+  object-fit: cover;
+}
+
+.available-property:hover {
+  scale: 1.1;
 }
 
 footer {
