--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ body {
 }
 
 .header-logo {
-  width: 60px;
-  height: 60px;
+  width: 90px;
+  height: 85px;
 }
 
 .header-logo:hover {
@@ -22,15 +22,12 @@ body {
 }
 
 header {
-  position: fixed;
-  z-index: 2;
   background-color: #ffffff;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 100px;
-  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
+  padding: 50px 100px;
 }
 
 .nav-list {
@@ -49,6 +46,7 @@ a:hover {
 }
 
 a {
+  font-size: 18px;
   text-decoration: none;
 }
 
@@ -71,13 +69,12 @@ main {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 100px;
+  box-shadow: inset 0px 10px 10px -7px rgba(0, 0, 0, 0.75);
 }
 
 .swiper-slide img {
-  width: 100%;
-  max-width: 1080px;
-  height: 440px;
+  width: 99%;
+  height: 80%;
   object-fit: fill;
   border-radius: 20px;
   box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
@@ -97,8 +94,7 @@ main {
 
 .swiper {
   width: 100%;
-  height: 460px;
-  margin: 20px;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -112,6 +108,7 @@ main {
 
 .swiper-wrapper {
   height: 100%;
+  padding: 10px 0;
 }
 
 .swiper-horizontal > .swiper-pagination-bullets,
@@ -119,19 +116,24 @@ main {
   bottom: 15px;
 }
 
+.properties {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .available-properties-wrapper {
   width: 100%;
-  padding: 20px;
   display: grid;
   justify-content: center;
   align-items: center;
   grid-template-columns: repeat(4, minmax(215px, 215px));
   gap: 50px 80px;
-  margin-bottom: 30px;
+  margin: 20px 0;
 }
 
 .available-property {
-  height: 250px;
+  height: 280px;
   border-radius: 20px;
   background-color: #ffffff;
   box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
@@ -141,7 +143,8 @@ main {
 }
 
 .available-property img {
-  object-fit: cover;
+  width: 150%;
+  height: 100%;
 }
 
 .available-property:hover {
@@ -150,18 +153,15 @@ main {
 
 footer {
   background-color: #ffffff;
+  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.75);
   width: 100%;
   height: 300px;
 }
 
-@media screen and (max-width: 816px) {
+@media screen and (max-width: 1100px) {
   header {
     width: 100%;
-    padding: 20px;
-  }
-
-  .nav-list {
-    display: none;
+    padding: 20px 30px;
   }
 
   .mobile-menu-icon {
@@ -170,27 +170,18 @@ footer {
     filter: #c5a583;
   }
 
-  .swiper-slide {
-    height: 100%;
+  .nav-list {
+    display: none;
   }
 
-  .swiper-slide img {
-    height: 350px;
-    box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.4);
-  }
-
-  .swiper {
-    height: 366px;
+  .available-properties-wrapper {
+    grid-template-columns: repeat(2, minmax(215px, 215px));
+    gap: 50px 110px;
   }
 }
 
-@media screen and (max-width: 670px) {
-  .swiper {
-    height: 206px;
-  }
-
-  .swiper-slide img {
-    box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.4);
-    height: 190px;
+@media screen and (max-width: 705px) {
+  .available-properties-wrapper {
+    grid-template-columns: repeat(1, minmax(215px, 215px));
   }
 }
