--- a/styles.css
+++ b/styles.css
@@ -188,14 +188,9 @@ main {
   border-radius: 20px;
   cursor: pointer;
   transition: 0.6s all ease;
-  overflow: hidden;
-}
-
-.flip-container {
-  width: 100%;
-  height: 100%;
   perspective: 1000px;
   box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
+  overflow: hidden;
 }
 
 .flipper {
@@ -206,7 +201,7 @@ main {
   transform-style: preserve-3d;
 }
 
-.flip-container:hover .flipper {
+.available-property:hover .flipper {
   transform: rotateY(180deg);
 }
 
@@ -226,14 +221,6 @@ main {
   height: 100%;
   backface-visibility: hidden;
 }
-
-/* .available-property img {
-  height: 100%;
-} */
-
-/* .available-property:hover {
-  scale: 1.1;
-} */
 
 footer {
   background-color: #ffffff;
