--- a/styles.css
+++ b/styles.css
@@ -189,14 +189,13 @@ main {
   cursor: pointer;
   transition: 0.6s all ease;
   perspective: 1000px;
-  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
-  overflow: hidden;
 }
 
 .flipper {
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 20px;
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
@@ -206,12 +205,21 @@ main {
 }
 
 .front {
-  background-color: red;
+  display: flex;
+  justify-content: center;
+}
+
+.front img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
 }
 
 .back {
   transform: rotateY(180deg);
-  background-color: black;
+  background-color: white;
 }
 
 .front,
@@ -219,7 +227,22 @@ main {
   position: absolute;
   width: 100%;
   height: 100%;
+  border-radius: 20px;
+  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
   backface-visibility: hidden;
+}
+
+.property-button {
+  position: relative;
+  bottom: 10px;
+  align-self: flex-end;
+  border: none;
+  border-radius: 5px;
+  background-color: red;
+  color: #ffffff;
+  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
+  font-weight: 600;
+  padding: 5px;
 }
 
 footer {
