--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ li a {
 
 .mobile-menu-icon {
   display: none;
+  outline: none;
 }
 
 .btn-menu {
@@ -257,6 +258,28 @@ main {
   padding: 5px;
 }
 
+.see-more-btn {
+  margin: 30px 0;
+  padding: 5px 20px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  color: #c5a583;
+  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
+  font-size: 14px;
+  font-weight: 700;
+  border: none;
+  outline: none;
+}
+
+.see-more-btn:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.see-more-btn:active {
+  opacity: 1;
+}
+
 .about {
   display: flex;
   flex-direction: column;
@@ -450,6 +473,10 @@ footer {
   }
 
   .nav-desktop {
+    display: none;
+  }
+
+  .secundary-property {
     display: none;
   }
 
