--- a/styles.css
+++ b/styles.css
@@ -396,8 +396,8 @@ footer {
 
 @media screen and (max-width: 1200px) {
   .available-properties-wrapper {
-    grid-template-columns: repeat(3, minmax(215px, 215px));
-    gap: 50px 200px;
+    grid-template-columns: repeat(4, minmax(215px, 215px));
+    gap: 50px 80px;
   }
 
   .about-sheet {
@@ -405,14 +405,14 @@ footer {
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1110px) {
   header {
     width: 100%;
     padding: 20px 30px;
   }
 
   .available-properties-wrapper {
-    gap: 50px 140px;
+    gap: 50px 50px;
   }
 
   .top-arrow-btn {
@@ -428,17 +428,21 @@ footer {
   }
 }
 
-@media screen and (max-width: 1010px) {
+@media screen and (max-width: 1030px) {
   .available-properties-wrapper {
     grid-template-columns: repeat(2, minmax(215px, 300px));
     padding: 0 26px;
   }
 
-  .secundary-property {
+  .secundary-property-mb {
     display: none;
   }
-  .secundary-property.show {
+  .secundary-property-mb.show {
     display: unset;
+  }
+
+  .available-properties-wrapper {
+    gap: 100px;
   }
 }
 
